--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,24 @@
 
     <groupId>dev.siea.uilabs</groupId>
     <artifactId>UILabs</artifactId>
-    <version>0.2.1</version>
+    <version>0.2.1-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>Pixel-Services</id>
+            <url>https://maven.pixel-services.com/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>Pixel-Services-Snapshots</id>
+            <url>https://maven.pixel-services.com/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <repositories>
         <repository>
@@ -39,4 +50,17 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.1.3</version>
+                <configuration>
+                    <altDeploymentRepository>Pixel-Services::default::https://maven.pixel-services.com/releases</altDeploymentRepository>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
