--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>dev.siea.uilabs</groupId>
     <artifactId>UILabs</artifactId>
-    <version>0.4-alpha</version>
+    <version>0.4-alpha-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>UILabs</name>
